[package]
name = "grpc-reader"
edition = "2024"
version.workspace = true

[dependencies]
sui-rpc-api.workspace = true
sui-types.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
bcs.workspace = true
hex.workspace = true
rand = "0.8"

[lints]
workspace = true
